--- a/src/app/modules/users/ui/pages/user-profile/user-ratings/user-ratings.component.html
+++ b/src/app/modules/users/ui/pages/user-profile/user-ratings/user-ratings.component.html
@@ -32,7 +32,7 @@
           }
         </div>
         <hr>
-        <problems-activity-card [username]="username"></problems-activity-card>
+<!--        <problems-activity-card [username]="username"></problems-activity-card>-->
       </div>
     </div>
 
