--- a/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
+++ b/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
@@ -1,29 +1,32 @@
-<kep-card class="problems-activity-card">
+<kep-card>
+  <div class="card-header">
+    <div class="card-title">
+      {{ 'Activity' | translate }}
+    </div>
+
+    <div aria-label="Select days" class="btn-group btn-group-sm" role="group">
+      @for (option of allowedDays; track option) {
+        <input
+          type="radio"
+          class="btn-check"
+          [value]="option"
+          [checked]="option === selectedDays"
+          name="activityDays"
+          [id]="'activity-' + option"
+          (change)="onDaysChange(option)"
+        >
+        <label class="btn btn-outline-primary" [class.active]="option === selectedDays" [for]="'activity-' + option">
+          {{ option }}
+        </label>
+      }
+    </div>
+  </div>
+
   <div class="card-body">
-    <div class="card-header px-0 pt-0 pb-1 d-flex justify-content-between align-items-center flex-wrap gap-1">
-      <div class="d-flex align-items-center gap-50">
-        <kep-icon name="activity" class="text-primary font-medium-2"></kep-icon>
-        <div>
-          <div class="text-uppercase text-muted fw-bold small">{{ 'Activity' | translate }}</div>
-          <div class="fw-bold">{{ solved | number }} {{ 'Problems' | translate }}</div>
-        </div>
-      </div>
-      <div class="btn-group btn-group-sm" role="group" aria-label="Select days">
-        @for (option of allowedDays; track option) {
-          <input
-            type="radio"
-            class="btn-check"
-            [value]="option"
-            [checked]="option === selectedDays"
-            name="activityDays"
-            [id]="'activity-' + option"
-            (change)="onDaysChange(option)"
-          >
-          <label class="btn btn-outline-primary" [class.active]="option === selectedDays" [for]="'activity-' + option">
-            {{ option }}
-          </label>
-        }
-      </div>
+    <kep-icon class="text-primary font-medium-2" name="activity"></kep-icon>
+    <div>
+      <div class="text-uppercase text-muted fw-bold small"></div>
+      <div class="fw-bold">{{ solved | number }} {{ 'Problems' | translate }}</div>
     </div>
 
     <div class="activity-content">
