--- a/src/app/modules/problems/pages/user-statistics/widgets/widget-facts/widget-facts.component.html
+++ b/src/app/modules/problems/pages/user-statistics/widgets/widget-facts/widget-facts.component.html
@@ -1,130 +1,184 @@
-<kep-card class="facts-card">
+<kep-card>
   <div class="card-header">
     <div class="card-title">
       {{ 'Facts' | translate }}
     </div>
   </div>
-  <div class="card-body">
-    <div class="facts-grid" *ngIf="facts">
-      <div class="fact-item" *ngIf="facts.firstAttempt">
-        <div class="fact-icon bg-primary-transparent">
-          <i [data-feather]="'attempt' | iconName"></i>
-        </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'FirstAttempt' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.firstAttempt.problemId"
-            class="link-primary"
-            [ngbTooltip]="firstAttemptTooltip"
-          >
-            {{ facts.firstAttempt.problemId }}. {{ facts.firstAttempt.problemTitle }}
-          </a>
-          <ng-template #firstAttemptTooltip>
-            <div class="mb-50">{{ facts.firstAttempt.datetime | localizedDate:'medium' }}</div>
-            <div [innerHTML]="facts.firstAttempt | attemptVerdictHTML"></div>
-          </ng-template>
-        </div>
+  <div class="card-body d-flex flex-column gap-3" *ngIf="facts">
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.firstAttempt"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-primary-subtle text-primary"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'attempt' | iconName"></i>
       </div>
-
-      <div class="fact-item" *ngIf="facts.firstAccepted">
-        <div class="fact-icon bg-success-transparent">
-          <i [data-feather]="'problem' | iconName"></i>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'FirstAttempt' | translate }}
         </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'FirstSolvedProblem' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.firstAccepted.problemId"
-            class="link-primary"
-            [ngbTooltip]="firstAcceptedTooltip"
-          >
-            {{ facts.firstAccepted.problemId }}. {{ facts.firstAccepted.problemTitle }}
-          </a>
-          <ng-template #firstAcceptedTooltip>
-            {{ facts.firstAccepted.datetime | localizedDate:'medium' }}
-          </ng-template>
-        </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.firstAttempt.problemId"
+          class="link-primary"
+          [ngbTooltip]="firstAttemptTooltip"
+        >
+          {{ facts.firstAttempt.problemId }}. {{ facts.firstAttempt.problemTitle }}
+        </a>
+        <ng-template #firstAttemptTooltip>
+          <div class="mb-1">{{ facts.firstAttempt.datetime | localizedDate:'medium' }}</div>
+          <div [innerHTML]="facts.firstAttempt | attemptVerdictHTML"></div>
+        </ng-template>
       </div>
+    </div>
 
-      <div class="fact-item" *ngIf="facts.lastAttempt">
-        <div class="fact-icon bg-warning-transparent">
-          <i [data-feather]="'attempt' | iconName"></i>
-        </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'LastAttempt' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.lastAttempt.problemId"
-            class="link-primary"
-            [ngbTooltip]="lastAttemptTooltip"
-          >
-            {{ facts.lastAttempt.problemId }}. {{ facts.lastAttempt.problemTitle }}
-          </a>
-          <ng-template #lastAttemptTooltip>
-            <div class="mb-50">{{ facts.lastAttempt.datetime | localizedDate:'medium' }}</div>
-            <div [innerHTML]="facts.lastAttempt | attemptVerdictHTML"></div>
-          </ng-template>
-        </div>
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.firstAccepted"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-success-subtle text-success"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'problem' | iconName"></i>
       </div>
-
-      <div class="fact-item" *ngIf="facts.lastAccepted">
-        <div class="fact-icon bg-info-transparent">
-          <i [data-feather]="'problem' | iconName"></i>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'FirstSolvedProblem' | translate }}
         </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'LastSolvedProblem' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.lastAccepted.problemId"
-            class="link-primary"
-            [ngbTooltip]="lastAcceptedTooltip"
-          >
-            {{ facts.lastAccepted.problemId }}. {{ facts.lastAccepted.problemTitle }}
-          </a>
-          <ng-template #lastAcceptedTooltip>
-            {{ facts.lastAccepted.datetime | localizedDate:'medium' }}
-          </ng-template>
-        </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.firstAccepted.problemId"
+          class="link-primary"
+          [ngbTooltip]="firstAcceptedTooltip"
+        >
+          {{ facts.firstAccepted.problemId }}. {{ facts.firstAccepted.problemTitle }}
+        </a>
+        <ng-template #firstAcceptedTooltip>
+          {{ facts.firstAccepted.datetime | localizedDate:'medium' }}
+        </ng-template>
       </div>
+    </div>
 
-      <div class="fact-item" *ngIf="facts.mostAttemptedProblem">
-        <div class="fact-icon bg-danger-transparent">
-          <i [data-feather]="'attempt' | iconName"></i>
-        </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'MostAttemptedProblem' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.mostAttemptedProblem.problemId"
-            class="link-primary"
-            [ngbTooltip]="facts.mostAttemptedProblem.attemptsCount"
-          >
-            {{ facts.mostAttemptedProblem.problemId }}. {{ facts.mostAttemptedProblem.problemTitle }}
-          </a>
-        </div>
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.lastAttempt"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-warning-subtle text-warning"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'attempt' | iconName"></i>
       </div>
-
-      <div class="fact-item" *ngIf="facts.mostAttemptedForSolveProblem">
-        <div class="fact-icon bg-secondary-transparent">
-          <i [data-feather]="'problem' | iconName"></i>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'LastAttempt' | translate }}
         </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'MostAttemptedForSolveProblem' | translate }}</div>
-          <a
-            [routerLink]="Resources.Problem | resourceById:facts.mostAttemptedForSolveProblem.problemId"
-            class="link-primary"
-            [ngbTooltip]="facts.mostAttemptedForSolveProblem.attemptsCount"
-          >
-            {{ facts.mostAttemptedForSolveProblem.problemId }}. {{ facts.mostAttemptedForSolveProblem.problemTitle }}
-          </a>
-        </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.lastAttempt.problemId"
+          class="link-primary"
+          [ngbTooltip]="lastAttemptTooltip"
+        >
+          {{ facts.lastAttempt.problemId }}. {{ facts.lastAttempt.problemTitle }}
+        </a>
+        <ng-template #lastAttemptTooltip>
+          <div class="mb-1">{{ facts.lastAttempt.datetime | localizedDate:'medium' }}</div>
+          <div [innerHTML]="facts.lastAttempt | attemptVerdictHTML"></div>
+        </ng-template>
       </div>
+    </div>
 
-      <div class="fact-item" *ngIf="facts.solvedWithSingleAttempt">
-        <div class="fact-icon bg-primary-transparent">
-          <kep-icon class="" name="check-circle"></kep-icon>
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.lastAccepted"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-info-subtle text-info"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'problem' | iconName"></i>
+      </div>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'LastSolvedProblem' | translate }}
         </div>
-        <div class="fact-content">
-          <div class="fact-title">{{ 'SolvedWithSingleAttempt' | translate }}</div>
-          <div class="fact-meta" [ngbTooltip]="facts.solvedWithSingleAttemptPercentage + '%'">
-            {{ facts.solvedWithSingleAttempt }}
-          </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.lastAccepted.problemId"
+          class="link-primary"
+          [ngbTooltip]="lastAcceptedTooltip"
+        >
+          {{ facts.lastAccepted.problemId }}. {{ facts.lastAccepted.problemTitle }}
+        </a>
+        <ng-template #lastAcceptedTooltip>
+          {{ facts.lastAccepted.datetime | localizedDate:'medium' }}
+        </ng-template>
+      </div>
+    </div>
+
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.mostAttemptedProblem"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-danger-subtle text-danger"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'attempt' | iconName"></i>
+      </div>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'MostAttemptedProblem' | translate }}
+        </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.mostAttemptedProblem.problemId"
+          class="link-primary"
+          [ngbTooltip]="facts.mostAttemptedProblem.attemptsCount"
+        >
+          {{ facts.mostAttemptedProblem.problemId }}. {{ facts.mostAttemptedProblem.problemTitle }}
+        </a>
+      </div>
+    </div>
+
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.mostAttemptedForSolveProblem"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-secondary-subtle text-secondary"
+        style="width: 40px; height: 40px;"
+      >
+        <i class="fs-5" [data-feather]="'problem' | iconName"></i>
+      </div>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'MostAttemptedForSolveProblem' | translate }}
+        </div>
+        <a
+          [routerLink]="Resources.Problem | resourceById:facts.mostAttemptedForSolveProblem.problemId"
+          class="link-primary"
+          [ngbTooltip]="facts.mostAttemptedForSolveProblem.attemptsCount"
+        >
+          {{ facts.mostAttemptedForSolveProblem.problemId }}. {{ facts.mostAttemptedForSolveProblem.problemTitle }}
+        </a>
+      </div>
+    </div>
+
+    <div
+      class="d-flex align-items-center gap-3 p-3 rounded-3 bg-body-tertiary"
+      *ngIf="facts.solvedWithSingleAttempt"
+    >
+      <div
+        class="rounded-circle d-flex align-items-center justify-content-center flex-shrink-0 bg-primary-subtle text-primary"
+        style="width: 40px; height: 40px;"
+      >
+        <kep-icon class="fs-5" name="check-circle"></kep-icon>
+      </div>
+      <div class="flex-grow-1 d-flex flex-column gap-1">
+        <div class="text-uppercase text-secondary fw-semibold small">
+          {{ 'SolvedWithSingleAttempt' | translate }}
+        </div>
+        <div class="fw-bold" [ngbTooltip]="facts.solvedWithSingleAttemptPercentage + '%'">
+          {{ facts.solvedWithSingleAttempt }}
         </div>
       </div>
     </div>
